--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -37,15 +37,21 @@
   font-size: 25px;
   color: white;
   background-color: rgb(0, 162, 255);
-  border-radius: 8px;
-  border: none;
+  border-radius: 30px;
+  border: 2px solid rgb(0, 162, 255);
   padding: 15px;
   cursor: pointer;
   font-weight: bold;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
 .get-to-know-btn:hover {
-  font-weight: bold;
-  color: rgb(212, 212, 212);
+  color: rgb(0, 162, 255);
+  background-color: white;
+}
+.about-link {
+  text-decoration: none;
 }
 
 @media (max-width: 1000px) {
@@ -101,13 +107,4 @@
 }
 .get-to-know-btn {
   animation: 2.5s fade-in ease-in;
-}
-
-@keyframes fade-in {
-  from {
-    opacity: 0%;
-  }
-  to {
-    opacity: 100%;
-  }
 }
