--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,23 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-}
-
-.character-icon {
-  padding: 0;
-
-  margin-top: 50px;
-  max-width: 150px;
-  height: auto;
-  background-color: black;
-  border-radius: 50%;
 }
 
 .about-heading {
-  width: 100%;
+  margin-top: 50px;
+
   font-family: "MyFont";
   text-align: center;
+  border-bottom: 2px solid rgb(5, 143, 223);
 }
 .about-heading > span {
   color: rgb(5, 143, 223);
@@ -28,7 +19,7 @@
   font-family: "MyFont";
   font-size: 19px;
   font-weight: 100;
-  max-width: 1000px;
+  max-width: 900px;
   padding: 10px 30px 30px 30px;
   border-bottom: 2px solid rgb(5, 143, 223);
 }
@@ -64,8 +55,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding-bottom: 30px;
-  max-width: 1000px;
+  padding-bottom: 50px;
+  max-width: 900px;
 }
 
 .skills-tools-heading {
