--- a/src/components/About.css
+++ b/src/components/About.css
@@ -55,10 +55,11 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding-bottom: 100px;
-  max-width: 900px;
 
-  padding-top: 50px;
+  max-width: 900px;
+  border: 1px solid red;
+
+  padding: 50px 50px 100px 50px;
 }
 
 .skills-tools-heading {
