--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -38,19 +38,17 @@
   color: white;
   background-color: rgb(5, 143, 223);
   border-radius: 30px;
-  border: 2px solid rgb(5, 143, 223);
+  border: 3px solid rgb(5, 143, 223);
   padding: 15px;
-  cursor: pointer;
   font-weight: bold;
   display: flex;
   align-items: center;
   text-decoration: none;
+  justify-content: center;
 }
 .get-to-know-btn:hover {
   color: rgb(5, 143, 223);
   background-color: white;
-}
-.about-link {
   text-decoration: none;
 }
 
