--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -7,7 +7,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   height: 100vh;
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 .sidebar-filler {
   height: 100vh;
@@ -27,51 +27,61 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 17px;
   align-items: center;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.5);
+  background-color: rgb(5, 143, 223);
 }
 
 .sidebar-heading {
+  background-color: rgb(5, 143, 223);
   font-family: "MyFont", sans-serif;
   font-weight: none;
-  font-size: 24px;
-  color: black;
-  background-color: white;
-  cursor: pointer;
-  border: none;
+  font-size: 25px;
+  color: white;
   font-weight: bold;
+  text-decoration: none;
 }
 .sidebar-heading:hover {
-  color: rgb(5, 143, 223);
+  transform: scale(0.99);
 }
 .close-sidebar {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 23px;
-  max-height: 40px;
   font-weight: bold;
   padding: 10px;
-  border: 2px solid black;
+  max-height: 40px;
+  border: 2px solid white;
   border-radius: 20px;
-  color: black;
-  cursor: pointer;
-  background-color: white;
+  color: rgb(255, 253, 253);
+  background-color: rgb(5, 143, 223);
 }
-.sidebar-btns-container {
+.close-sidebar:hover {
+  cursor: pointer;
+  transform: scale(0.99);
+}
+.sidebar-links-container {
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar-btns {
-  padding-left: 25px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-  text-align: start;
+  font-size: 28px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-family: "MyFont", sans-serif;
+}
+
+.sidebar-btns:hover {
+  color: rgb(5, 143, 223);
+  transform: scale(0.99);
 }
 
 /* Animation */
