--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -66,3 +66,29 @@
   color: rgb(5, 143, 223);
   font-weight: 700;
 }
+
+/* Projects-navbar */
+
+.pnav {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+  background-color: rgb(5, 143, 223);
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
+  position: sticky;
+  top: 0;
+}
+
+.pnav-link {
+  font-family: "MyFont", sans-serif;
+  color: white;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: none;
+}
+.pnav-link:hover {
+  text-decoration: underline;
+  transform: scale(0.98);
+}
