--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -66,7 +66,8 @@
 .sidebar-links-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding-left: 50px;
+  padding-right: 70px;
   justify-content: center;
 }
 
@@ -78,6 +79,7 @@
   color: black;
   font-weight: bold;
   font-family: "MyFont", sans-serif;
+  border-bottom: 1px solid rgb(5, 143, 223);
 }
 
 .sidebar-btns:hover {
