--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -18,8 +18,8 @@
 
 .home-heading {
   text-align: center;
-  font-family: "Carter One";
-  font-weight: 400;
+  font-family: "DM Sans";
+  font-weight: 700;
   font-size: 60px;
   margin-bottom: 0;
 }
