--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -5,11 +5,8 @@
   font-style: normal;
 }
 
-.home {
-  overflow: hidden;
-}
-
 .home-container {
+  overflow: hidden;
   display: flex;
   min-height: 92vh;
   justify-content: center;
@@ -30,27 +27,30 @@
   font-size: 50px;
   margin-top: 0;
 }
-.home-img {
-  width: 500px;
-  height: auto;
-}
-
-.home-container > div,
-.home-img {
-  margin-bottom: 100px;
-  font-family: "MyFont", sans-serif;
-  font-size: 25px;
-}
-
 .home-desc > span {
   color: rgb(5, 143, 223);
   text-decoration: underline;
 }
+
+.home-img {
+  width: 500px;
+  height: auto;
+  margin-bottom: 100px;
+}
+
+.home-container-links {
+  display: flex;
+
+  justify-content: space-around;
+  align-items: center;
+}
+
 .get-to-know-btn {
+  font-weight: bold;
   font-size: 25px;
   color: white;
   background-color: rgb(5, 143, 223);
-  border-radius: 30px;
+  border-radius: 15px;
   border: 3px solid rgb(5, 143, 223);
   padding: 15px;
   font-weight: bold;
@@ -59,10 +59,25 @@
   text-decoration: none;
   justify-content: center;
 }
+
 .get-to-know-btn:hover {
-  color: rgb(5, 143, 223);
-  background-color: white;
+  transform: scale(1.3);
+  transform: translateY(-5px);
+  transform: rotate(-2deg);
+}
+.devicon-linkedin-plain,
+.devicon-github-original {
+  font-size: 40px;
+}
+.github-btn-link {
   text-decoration: none;
+}
+.github-btn {
+  color: rgb(5, 143, 223);
+}
+.github-btn-link:hover {
+  transform: scale(3);
+  transform: rotate(-1deg);
 }
 
 @media (max-width: 1050px) {
