--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -61,23 +61,26 @@
 }
 
 .get-to-know-btn:hover {
-  transform: scale(1.3);
-  transform: translateY(-5px);
-  transform: rotate(-2deg);
+  color: rgb(5, 143, 223);
+  background-color: white;
 }
 .devicon-linkedin-plain,
 .devicon-github-original {
   font-size: 40px;
-}
-.github-btn-link {
-  text-decoration: none;
-}
-.github-btn {
   color: rgb(5, 143, 223);
 }
-.github-btn-link:hover {
-  transform: scale(3);
-  transform: rotate(-1deg);
+.github-btn-link,
+.linkedin-btn-link {
+  text-decoration: none;
+}
+.devicon-linkedin-plain:hover,
+.devicon-github-original:hover {
+  color: white;
+  background-color: rgb(5, 143, 223);
+  border: none;
+}
+.devicon-github-original:hover {
+  border-radius: 1em;
 }
 
 @media (max-width: 1050px) {
