--- a/src/components/About.css
+++ b/src/components/About.css
@@ -16,7 +16,7 @@
 
 .about-paragraph {
   font-family: "MyFont";
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 100;
   max-width: 900px;
   padding: 20px 30px 60px 30px;
@@ -75,9 +75,13 @@
 .skills-img-container {
   text-align: center;
   font-weight: 600;
+  font-size: 14px;
   font-family: "MyFont";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .skills-img-container > img {
-  max-width: 120px;
+  max-width: 80px;
 }
