--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -22,6 +22,7 @@
   flex-direction: column;
   gap: 60px;
   justify-content: flex-start;
+  border-left: 2px solid rgb(133, 133, 133);
 }
 
 .sidebar-heading-container {
@@ -44,7 +45,7 @@
   text-decoration: none;
 }
 .sidebar-heading:hover {
-  transform: scale(0.99);
+  color: rgb(240, 240, 240);
 }
 .close-sidebar {
   display: flex;
@@ -61,7 +62,8 @@
 }
 .close-sidebar:hover {
   cursor: pointer;
-  transform: scale(0.99);
+  color: rgb(240, 240, 240);
+  border: 2px solid rgb(240, 240, 240);
 }
 .sidebar-links-container {
   display: flex;
@@ -69,12 +71,15 @@
   padding-left: 50px;
   padding-right: 70px;
   justify-content: center;
+
+  height: 40%;
+  gap: 20px;
 }
 
 .sidebar-btns {
-  font-size: 28px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  font-size: 25px;
+  padding-top: 30px;
+  padding-bottom: 5px;
   text-decoration: none;
   color: black;
   font-weight: bold;
