--- a/src/components/ProjectsInfo.css
+++ b/src/components/ProjectsInfo.css
@@ -22,6 +22,7 @@
 }
 .project-link > h2 {
   font-family: "MyFont", sans-serif;
+  font-weight: 500;
 }
 .project-link > a {
   font-family: "MyFont", sans-serif;
@@ -31,11 +32,12 @@
 }
 .project-about-paragraph {
   display: flex;
+  line-height: 2;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-family: "MyFont";
-  font-size: 14px;
+  font-size: 16px;
   box-sizing: border-box;
   width: 100%;
   padding: 20px 300px 20px 300px;
